--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <option value="Instagram">Instagram</option>
                 <option value="Snapchat">Snapchat</option>
             </select>
-            <div id="feedbackField" style="display: none;">
+            <div id="feedbackField">
                 <label for="feedback">Was lief falsch oder könnte verbessert werden?</label>
                 <textarea id="feedback" name="feedback" rows="5" required></textarea>
             </div>
-            <div id="captchaField" style="display: none;">
+            <div id="captchaField">
                 <label for="captcha">Geben Sie den Code ein:</label>
                 <input type="text" id="captcha" name="captcha" placeholder="12345" required>
             </div>
